# pymultinotifier

./: .gitignore  README.md  app_globals.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 54411488da94_add_profile_platform_post_tables.py  5df4fc2ae663_add_credentials_column_to_platform.py
doc/examples/: config_example.toml
pymultinotifier/: main.py  types.py
pymultinotifier/config/: config.toml  manager.py  models.py
pymultinotifier/database/: db_manager.py  models.py
pymultinotifier/utils/: helper.py
